вроде бы рабочая навигация

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskAndBackStack">
         <activity
-            android:name=".MainActivity"
+            android:name=".ActivityC"
+            android:exported="false"
+            android:taskAffinity="com.example.taskandbackstack.ActivityB"/>
+        <activity
+            android:name=".ActivityB"
+            android:exported="false"
+            android:taskAffinity="com.example.taskandbackstack.ActivityB"/>
+        <activity
+            android:name=".ActivityA"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
